feature: Add talk about Conway's law

--- a/source/talks.html.twig
+++ b/source/talks.html.twig
@@ -559,31 +559,6 @@ title: Talks
         <div class="panel">
             <div class="media">
                 <div class="media-left">
-                    <a href="https://skillsmatter.com/skillscasts/5899-modelling-by-example">
-                        <img
-                            class="media-object"
-                            src="https://i.vimeocdn.com/video/495636915.jpg?mw=120&mh=90"
-                            alt="Modelling by example"
-                        >
-                    </a>
-                </div>
-                <div class="media-body">
-                    <h4 class="media-heading">
-                        Modelling by example <small>Konstantin Kudriashov</small>
-                    </h4>
-                    <p>
-                        Use BDD scenarios to drive the design of your core domain model. <strong>
-                        Reduce translation costs</strong> by using the ubiquitous language in both
-                        your scenarios and your model.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-sm-6">
-        <div class="panel">
-            <div class="media">
-                <div class="media-left">
                     <a href="https://www.youtube.com/watch?v=9mLK_8hKii8">
                         <img
                             class="media-object"
@@ -599,6 +574,56 @@ title: Talks
                     <p>
                         Pay attention to your objects messages. Always seek for abstractions,
                         because <strong>nothing is always something</strong>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://skillsmatter.com/skillscasts/5899-modelling-by-example">
+                        <img
+                            class="media-object"
+                            src="https://i.vimeocdn.com/video/495636915.jpg?mw=120&mh=90"
+                            alt="Modelling by example"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Modelling by example <small>Konstantin Kudriashov</small>
+                    </h4>
+                    <p>
+                        Use BDD scenarios to drive the design of your core domain model. <strong>
+                            Reduce translation costs</strong> by using the ubiquitous language in both
+                        your scenarios and your model.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=BDagiC8Sw48">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/BDagiC8Sw48/1.jpg"
+                            alt="You can’t fight Conway’s law"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        You can’t fight Conway’s law <small>Avraham Poupko</small>
+                    </h4>
+                    <p>
+                        Conway's law: Any organization that designs a system will inevitably produce
+                        a design whose structure is a copy of the organization's communication
+                        structure.
                     </p>
                 </div>
             </div>
