feature: Add Integrated tests are a scam talk

--- a/source/talks.html.twig
+++ b/source/talks.html.twig
@@ -629,4 +629,28 @@ title: Talks
             </div>
         </div>
     </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://vimeo.com/80533536">
+                        <img
+                            class="media-object"
+                            src="https://i.vimeocdn.com/video/456490527_100x75.jpg"
+                            alt="Integrated Tests Are A Scam"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Integrated Tests Are A Scam <small>J. B. Rainsberger</small>
+                    </h4>
+                    <p>
+                        The more integrated tests we have, the less design feedback we get.
+                        It produces a positive feedback loop of negative feelings.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>
