--- a/source/talks.html.twig
+++ b/source/talks.html.twig
@@ -657,6 +657,29 @@ title: Talks
         <div class="panel">
             <div class="media">
                 <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=NZ5mI6-tNUc">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/NZ5mI6-tNUc/3.jpg"
+                            alt="Design matters"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Design matters <small>Rebecca Wirfs-Brock</small>
+                    </h4>
+                    <p>
+                        Reshape your design heuristics based on what you learn from your designs
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
                     <a href="https://www.youtube.com/watch?v=RAxiiRPHS9k">
                         <img
                             class="media-object"
@@ -683,20 +706,22 @@ title: Talks
         <div class="panel">
             <div class="media">
                 <div class="media-left">
-                    <a href="https://www.youtube.com/watch?v=NZ5mI6-tNUc">
+                    <a href="https://www.youtube.com/watch?v=ZsHMHukIlJY">
                         <img
                             class="media-object"
-                            src="http://i3.ytimg.com/vi/NZ5mI6-tNUc/3.jpg"
-                            alt="Design matters"
+                            src="http://i3.ytimg.com/vi/ZsHMHukIlJY/3.jpg"
+                            alt="Seven ineffective coding habits of many programmers"
                         >
                     </a>
                 </div>
                 <div class="media-body">
                     <h4 class="media-heading">
-                        Design matters <small>Rebecca Wirfs-Brock</small>
+                        Seven ineffective coding habits of many programmers
+                        <small>Kevlin Henney</small>
                     </h4>
                     <p>
-                        Reshape your design heuristics based on what you learn from your designs
+                        Noisy code, unsustainable spacing, lego naming, underabstraction,
+                        unencapsulated state, getters and setters, uncohesive tests
                     </p>
                 </div>
             </div>
