--- a/source/talks.html.twig
+++ b/source/talks.html.twig
@@ -727,4 +727,28 @@ title: Talks
             </div>
         </div>
     </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=fnRwfjMqKM8">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/fnRwfjMqKM8/2.jpg"
+                            alt="Development, by the numbers"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Development, by the numbers <small>Anthony Ferrara</small>
+                    </h4>
+                    <p>
+                        How can we objectively quantify whether code is good or if it needs
+                        improving?
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>
