Add Magic tricks of testing talk.

--- a/source/talks.html.twig
+++ b/source/talks.html.twig
@@ -776,4 +776,29 @@ title: Talks
             </div>
         </div>
     </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=URSWYvyc42M">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/URSWYvyc42M/1.jpg"
+                            alt="The Magic Tricks of Testing"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        The Magic Tricks of Testing <small>Sandy Metz</small>
+                    </h4>
+                    <p>
+                        Why do you hate your tests? They're slow. They're fragile. They're expensive.
+                        There's a few tricks to fix these problems. They'll make your tests: thorough,
+                        stable, fast, and few.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>
