feature: Add Sarah Mei's talk

--- a/source/talks.html.twig
+++ b/source/talks.html.twig
@@ -825,4 +825,30 @@ title: Talks
             </div>
         </div>
     </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=UgrVdHYEZGg">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/UgrVdHYEZGg/1.jpg"
+                            alt="The Insufficiency of Good Design"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        The Insufficiency of Good Design <small>Sarah Mei</small>
+                    </h4>
+                    <p>
+                        It's the communication patterns in a group rather than the individuals
+                        within it that determine whether or not they produce good code together.
+                        Your team's communication patterns are the best predictor of the quality
+                        of the code you produce.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>
