feature: Add Simon Brown talk about the C4 model

--- a/source/talks.html.twig
+++ b/source/talks.html.twig
@@ -831,6 +831,32 @@ title: Talks
         <div class="panel">
             <div class="media">
                 <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=0o9_zjZeJuE">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/0o9_zjZeJuE/1.jpg"
+                            alt="Visualise, Document & Explore your Software Architecture"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Visualise, Document & Explore your Software Architecture <small>Simon Brown</small>
+                    </h4>
+                    <p>
+                        The C4 model offers 4 diagrams to communicate software architecture:
+                        <strong>System Context</strong>, <strong>Containers</strong>,
+                        <strong>Components</strong> and <strong>Code</strong>. Documentation should
+                        describe what the code doesn't.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
                     <a href="https://www.youtube.com/watch?v=4Y0tOi7QWqM">
                         <img
                             class="media-object"
