fix: Update bootstrap's URLs to use https

--- a/source/_views/components/footer.html.twig
+++ b/source/_views/components/footer.html.twig
@@ -1,7 +1,7 @@
 <div class="container">
     2014 - {{ "now"|date("Y") }} Luis Montealegre
     <p  class="pull-right">
-        <a href="http://creativecommons.org/licenses/by-nc/2.5/">
+        <a href="https://creativecommons.org/licenses/by-nc/2.5/">
             <img src="/images/cc.primary.srr.gif" alt="Algunos derechos reservados">
         </a>
     </p>
