--- a/source/_views/components/head.html.twig
+++ b/source/_views/components/head.html.twig
@@ -10,7 +10,7 @@
 >
 <link
     rel="stylesheet"
-    href="http://netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    href="https://netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
 >
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
