--- a/source/talks.html.twig
+++ b/source/talks.html.twig
@@ -18,7 +18,7 @@ title: Talks
                 <div class="media-left">
                     <a href="https://www.youtube.com/watch?v=uQUxJObxTUs">
                         <img
-                            class="media-object" src="http://i3.ytimg.com/vi/uQUxJObxTUs/1.jpg"
+                            class="media-object" src="https://i3.ytimg.com/vi/uQUxJObxTUs/1.jpg"
                             alt="Min-maxing Software Costs"
                         >
                     </a>
@@ -44,7 +44,7 @@ title: Talks
                 <div class="media-left">
                     <a href="https://www.youtube.com/watch?v=ZBiexI2mv-k">
                         <img
-                            class="media-object" src="http://i3.ytimg.com/vi/ZBiexI2mv-k/2.jpg"
+                            class="media-object" src="https://i3.ytimg.com/vi/ZBiexI2mv-k/2.jpg"
                             alt="Things I Believe Now That I'm Old"
                         >
                     </a>
@@ -70,7 +70,7 @@ title: Talks
                 <div class="media-left">
                     <a href="https://www.youtube.com/watch?v=_xjpO3y_Np4">
                         <img
-                            class="media-object" src="http://i3.ytimg.com/vi/_xjpO3y_Np4/2.jpg"
+                            class="media-object" src="https://i3.ytimg.com/vi/_xjpO3y_Np4/2.jpg"
                             alt="The Silver Bullet Syndrome"
                         >
                     </a>
@@ -91,7 +91,7 @@ title: Talks
                 <div class="media-left">
                     <a href="https://www.youtube.com/watch?v=MS3c9hz0bRg">
                         <img
-                            class="media-object" src="http://i3.ytimg.com/vi/MS3c9hz0bRg/1.jpg"
+                            class="media-object" src="https://i3.ytimg.com/vi/MS3c9hz0bRg/1.jpg"
                             alt="Software is Details"
                         >
                     </a>
@@ -116,7 +116,7 @@ title: Talks
                     <a href="https://www.youtube.com/watch?v=8bZh5LMaSmE">
                         <img
                             class="media-object"
-                            src="http://i3.ytimg.com/vi/8bZh5LMaSmE/3.jpg"
+                            src="https://i3.ytimg.com/vi/8bZh5LMaSmE/3.jpg"
                             alt="All the Little Things"
                         >
                     </a>
@@ -164,7 +164,7 @@ title: Talks
                     <a href="https://www.youtube.com/watch?v=FKTxC9pl-WM">
                         <img
                             class="media-object"
-                            src="http://i3.ytimg.com/vi/FKTxC9pl-WM/2.jpg"
+                            src="https://i3.ytimg.com/vi/FKTxC9pl-WM/2.jpg"
                             alt="Making Badass Developers"
                         >
                     </a>
@@ -188,7 +188,7 @@ title: Talks
                     <a href="https://www.youtube.com/watch?v=FS1mnISoG7U">
                         <img
                             class="media-object"
-                            src="http://i3.ytimg.com/vi/FS1mnISoG7U/2.jpg"
+                            src="https://i3.ytimg.com/vi/FS1mnISoG7U/2.jpg"
                             alt="Scaling Yourself"
                         >
                     </a>
@@ -212,7 +212,7 @@ title: Talks
                     <a href="https://www.youtube.com/watch?v=gAQ6t3F_2Ug">
                         <img
                             class="media-object"
-                            src="http://i3.ytimg.com/vi/gAQ6t3F_2Ug/2.jpg"
+                            src="https://i3.ytimg.com/vi/gAQ6t3F_2Ug/2.jpg"
                             alt="Model-Minded Development"
                         >
                     </a>
@@ -283,7 +283,7 @@ title: Talks
                     <a href="https://www.youtube.com/watch?v=HQXVKHoUQxY">
                         <img
                             class="media-object"
-                            src="http://i3.ytimg.com/vi/HQXVKHoUQxY/1.jpg"
+                            src="https://i3.ytimg.com/vi/HQXVKHoUQxY/1.jpg"
                             alt="Connascence Examined"
                         >
                     </a>
@@ -307,7 +307,7 @@ title: Talks
                     <a href="https://www.youtube.com/watch?v=veTVAN0oEkQ">
                         <img
                             class="media-object"
-                            src="http://i3.ytimg.com/vi/veTVAN0oEkQ/3.jpg"
+                            src="https://i3.ytimg.com/vi/veTVAN0oEkQ/3.jpg"
                             alt="Event Storming"
                         >
                     </a>
@@ -333,7 +333,7 @@ title: Talks
                     <a href="https://www.youtube.com/watch?v=iu5WB-NvHFc">
                         <img
                             class="media-object"
-                            src="http://i3.ytimg.com/vi/iu5WB-NvHFc/2.jpg"
+                            src="https://i3.ytimg.com/vi/iu5WB-NvHFc/2.jpg"
                             alt="Testing Lessons from Extreme Programmers"
                         >
                     </a>
@@ -359,7 +359,7 @@ title: Talks
                     <a href="https://www.youtube.com/watch?v=vqEg37e4Mkw">
                         <img
                             class="media-object"
-                            src="http://i3.ytimg.com/vi/vqEg37e4Mkw/2.jpg"
+                            src="https://i3.ytimg.com/vi/vqEg37e4Mkw/2.jpg"
                             alt="Workflows of refactoring"
                         >
                     </a>
@@ -385,7 +385,7 @@ title: Talks
                     <a href="https://www.youtube.com/watch?v=B93QezwTQpI">
                         <img
                             class="media-object"
-                            src="http://i3.ytimg.com/vi/B93QezwTQpI/1.jpg"
+                            src="https://i3.ytimg.com/vi/B93QezwTQpI/1.jpg"
                             alt="The Transformation Priority Premise"
                         >
                     </a>
@@ -411,7 +411,7 @@ title: Talks
                     <a href="https://www.youtube.com/watch?v=okUmXP1vAic">
                         <img
                             class="media-object"
-                            src="http://i3.ytimg.com/vi/okUmXP1vAic/3.jpg"
+                            src="https://i3.ytimg.com/vi/okUmXP1vAic/3.jpg"
                             alt="Metaphors We Compute By"
                         >
                     </a>
@@ -462,7 +462,7 @@ title: Talks
                     <a href="https://www.youtube.com/watch?v=CGN4RFkhH2M">
                         <img
                             class="media-object"
-                            src="http://i3.ytimg.com/vi/CGN4RFkhH2M/1.jpg"
+                            src="https://i3.ytimg.com/vi/CGN4RFkhH2M/1.jpg"
                             alt="Hexagonal Rails"
                         >
                     </a>
@@ -487,7 +487,7 @@ title: Talks
                     <a href="https://www.youtube.com/watch?v=GWEEPt8VvmU">
                         <img
                             class="media-object"
-                            src="http://i3.ytimg.com/vi/GWEEPt8VvmU/2.jpg"
+                            src="https://i3.ytimg.com/vi/GWEEPt8VvmU/2.jpg"
                             alt="Overkill"
                         >
                     </a>
@@ -512,7 +512,7 @@ title: Talks
                     <a href="https://www.youtube.com/watch?v=GtB5DAfOWMQ">
                         <img
                             class="media-object"
-                            src="http://i3.ytimg.com/vi/GtB5DAfOWMQ/2.jpg"
+                            src="https://i3.ytimg.com/vi/GtB5DAfOWMQ/2.jpg"
                             alt="Your code sucks, let's fix it"
                         >
                     </a>
@@ -537,7 +537,7 @@ title: Talks
                     <a href="https://www.youtube.com/watch?v=ZJ63ltuwMaE">
                         <img
                             class="media-object"
-                            src="http://i3.ytimg.com/vi/ZJ63ltuwMaE/1.jpg"
+                            src="https://i3.ytimg.com/vi/ZJ63ltuwMaE/1.jpg"
                             alt="Unbreakable Domain Models"
                         >
                     </a>
@@ -562,7 +562,7 @@ title: Talks
                     <a href="https://www.youtube.com/watch?v=9mLK_8hKii8">
                         <img
                             class="media-object"
-                            src="http://i3.ytimg.com/vi/9mLK_8hKii8/2.jpg"
+                            src="https://i3.ytimg.com/vi/9mLK_8hKii8/2.jpg"
                             alt="Nothing is Something"
                         >
                     </a>
@@ -611,7 +611,7 @@ title: Talks
                     <a href="https://www.youtube.com/watch?v=BDagiC8Sw48">
                         <img
                             class="media-object"
-                            src="http://i3.ytimg.com/vi/BDagiC8Sw48/1.jpg"
+                            src="https://i3.ytimg.com/vi/BDagiC8Sw48/1.jpg"
                             alt="You can’t fight Conway’s law"
                         >
                     </a>
@@ -660,7 +660,7 @@ title: Talks
                     <a href="https://www.youtube.com/watch?v=NZ5mI6-tNUc">
                         <img
                             class="media-object"
-                            src="http://i3.ytimg.com/vi/NZ5mI6-tNUc/3.jpg"
+                            src="https://i3.ytimg.com/vi/NZ5mI6-tNUc/3.jpg"
                             alt="Design matters"
                         >
                     </a>
@@ -683,7 +683,7 @@ title: Talks
                     <a href="https://www.youtube.com/watch?v=RAxiiRPHS9k">
                         <img
                             class="media-object"
-                            src="http://i3.ytimg.com/vi/RAxiiRPHS9k/1.jpg"
+                            src="https://i3.ytimg.com/vi/RAxiiRPHS9k/1.jpg"
                             alt="Fast test, slow test"
                         >
                     </a>
@@ -709,7 +709,7 @@ title: Talks
                     <a href="https://www.youtube.com/watch?v=fnRwfjMqKM8">
                         <img
                             class="media-object"
-                            src="http://i3.ytimg.com/vi/fnRwfjMqKM8/2.jpg"
+                            src="https://i3.ytimg.com/vi/fnRwfjMqKM8/2.jpg"
                             alt="Development, by the numbers"
                         >
                     </a>
@@ -733,7 +733,7 @@ title: Talks
                     <a href="https://www.youtube.com/watch?v=ZsHMHukIlJY">
                         <img
                             class="media-object"
-                            src="http://i3.ytimg.com/vi/ZsHMHukIlJY/3.jpg"
+                            src="https://i3.ytimg.com/vi/ZsHMHukIlJY/3.jpg"
                             alt="Seven ineffective coding habits of many programmers"
                         >
                     </a>
@@ -758,7 +758,7 @@ title: Talks
                     <a href="https://www.youtube.com/watch?v=kIKwPNKXaLU">
                         <img
                             class="media-object"
-                            src="http://i3.ytimg.com/vi/kIKwPNKXaLU/1.jpg"
+                            src="https://i3.ytimg.com/vi/kIKwPNKXaLU/1.jpg"
                             alt="Tackling Complexity in the Heart of Software"
                         >
                     </a>
@@ -783,7 +783,7 @@ title: Talks
                     <a href="https://www.youtube.com/watch?v=UgrVdHYEZGg">
                         <img
                             class="media-object"
-                            src="http://i3.ytimg.com/vi/UgrVdHYEZGg/1.jpg"
+                            src="https://i3.ytimg.com/vi/UgrVdHYEZGg/1.jpg"
                             alt="The Insufficiency of Good Design"
                         >
                     </a>
@@ -809,7 +809,7 @@ title: Talks
                     <a href="https://www.youtube.com/watch?v=URSWYvyc42M">
                         <img
                             class="media-object"
-                            src="http://i3.ytimg.com/vi/URSWYvyc42M/1.jpg"
+                            src="https://i3.ytimg.com/vi/URSWYvyc42M/1.jpg"
                             alt="The Magic Tricks of Testing"
                         >
                     </a>
@@ -834,7 +834,7 @@ title: Talks
                     <a href="https://www.youtube.com/watch?v=0o9_zjZeJuE">
                         <img
                             class="media-object"
-                            src="http://i3.ytimg.com/vi/0o9_zjZeJuE/1.jpg"
+                            src="https://i3.ytimg.com/vi/0o9_zjZeJuE/1.jpg"
                             alt="Visualise, Document & Explore your Software Architecture"
                         >
                     </a>
@@ -860,7 +860,7 @@ title: Talks
                     <a href="https://www.youtube.com/watch?v=4Y0tOi7QWqM">
                         <img
                             class="media-object"
-                            src="http://i3.ytimg.com/vi/4Y0tOi7QWqM/1.jpg"
+                            src="https://i3.ytimg.com/vi/4Y0tOi7QWqM/1.jpg"
                             alt="Software that Fits in Your Head"
                         >
                     </a>
