--- a/source/_views/en/index.html.twig
+++ b/source/_views/en/index.html.twig
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="welcome">
                 <h1>Luis Montealegre</h1>
-                <h2>Web Developer</h2>
+                <h2>Software Engineer</h2>
                 <ul class="social">
                     <li>
                         <a href="http://twitter.com/MontealegreLuis" class="link-icon" target="_blank">
