feat: Update current job information

--- a/source/en/index.html.twig
+++ b/source/en/index.html.twig
@@ -62,10 +62,17 @@ title: Howdy!
         <div class="col-sm-6">
             <p>
                 In January, 2016, I moved to <strong>San Antonio Texas</strong> to start a new
-                adventure, with my family, as a full-time instructor for
+                endeavor, with my family, as a full-time instructor at
                 <a href="http://codeup.com/about/" target="_blank" rel="noopener">
                     Codeup.
                 </a>
+            </p>
+            <p>
+                In May, 2018 I had the pleasure to join
+                <a href="https://www.ea.com/news/tour-the-ea-austin-studio" target="_blank" rel="noopener">
+                    EA in Austin, Texas
+                </a>,
+                where I currently work.
             </p>
             <p>
                 I love to spend my spare time with my wife (<strong>Meri</strong>) and my two
