--- a/source/index.html.twig
+++ b/source/index.html.twig
@@ -69,6 +69,13 @@ title: ¡Hola!
                 </a>.
             </p>
             <p>
+                En mayo de 2018 tuve la fortuna de unirme al
+                <a href="https://www.ea.com/news/tour-the-ea-austin-studio" target="_blank" rel="noopener">
+                    equipo de EA en Austin, Texas
+                </a>,
+                donde trabajo actualmente
+            </p>
+            <p>
                 Fuera de mi trabajo me gusta pasar tiempo con mi esposa (Meri) y mis dos
                 hijos (Mario de 6 años y Alejandro de 4). Soy fan del café cargado y sin
                 azucar, de la pizza, el sushi, la cerveza oscura y de las películas de
