feat: Cleanup content

--- a/source/_views/components/menu.html.twig
+++ b/source/_views/components/menu.html.twig
@@ -16,25 +16,22 @@
                 <ul class="nav navbar-nav">
                     <li><a href="/cv/">Curriculum</a></li>
                     <li><a href="/portfolio/">Portafolio</a></li>
-                    <li><a href="/blog/">Blog</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            Favoritos <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/charlas/">Charlas</a></li>
+                        </ul>
+                    </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="/cv-latest.pdf" title="Descargar CV">
-                            <img height="25px" src="/images/download.png" alt="Descargar CV">
-                        </a>
-                    </li>
                     <li><a href="/">
                         <span class="language language-current">MX</span>
                     </a></li>
                     <li><a href="/en/">
                         <span class="language">US</span>
                     </a></li>
-                    <li>
-                        <a href="/atom.xml" class="link-icon">
-                            <img src="/images/rss.png" alt="RSS">
-                        </a>
-                    </li>
                 </ul>
             </div>
         </div>
