--- a/source/index.html.twig
+++ b/source/index.html.twig
@@ -9,7 +9,7 @@ title: ¡Hola!
         </div>
         <div class="col-sm-6">
             <p>
-                Mi nombre es Luis Montealegre Vázquez, egresé de la <strong>Maestría en
+                Soy Luis Montealegre Vázquez, egresado de la <strong>Maestría en
                 Ciencias de la Computación</strong> en la
                 <a href="http://www.cs.buap.mx/" target="_blank" rel="noopener">
                     BUAP
@@ -42,7 +42,7 @@ title: ¡Hola!
                     Digizent International
                 </a>
                 y como <strong>consultor independiente</strong>.
-                Durante estos <strong>12 años</strong> he trabajado con varios
+                Durante estos <strong>15 años</strong> he trabajado con varios
                 lenguajes de programación, principalmente: <strong>PHP</strong>, <strong>Java</strong>
                 y <strong>C#</strong>
             </p>
@@ -51,7 +51,7 @@ title: ¡Hola!
                 en varias materias de programación.
                 En julio de 2012, con el apoyo de muchos amig@s, organizamos el
                 <a
-                    href="http://www.comunidadphppuebla.com"
+                    href="https://www.facebook.com/ComPeHPPuebla/"
                     target="_blank"
                     rel="noopener"
                 >
@@ -64,51 +64,21 @@ title: ¡Hola!
                 En enero de 2016 me mudé a <strong>San Antonio Texas</strong> a
                 empezar una nueva aventura con mi familia, como instructor, por
                 primera vez de tiempo completo, en
-                <a href="http://codeup.com/about/" target="_blank" rel="noopener">
+                <a href="https://codeup.com/" target="_blank" rel="noopener">
                     Codeup
                 </a>.
             </p>
             <p>
                 En mayo de 2018 tuve la fortuna de unirme al
                 <a href="https://www.ea.com/news/tour-the-ea-austin-studio" target="_blank" rel="noopener">
-                    equipo de EA en Austin, Texas
+                    equipo de EA
                 </a>,
-                donde trabajo actualmente
+                en Austin, Texas, donde trabajo actualmente
             </p>
             <p>
-                Fuera de mi trabajo me gusta pasar tiempo con mi esposa (Meri) y mis dos
-                hijos (Mario de 6 años y Alejandro de 4). Soy fan del café cargado y sin
-                azucar, de la pizza, el sushi, la cerveza oscura y de las películas de
-                ciencia ficción.
-            </p>
-            <p>
-                <strong>Puedes ponerte en contacto conmigo</strong> a través de las redes
-                sociales en este sitio o por correo, ya sea para trabajar
-                en algo juntos o para que platiquemos de lo que quieras.
+                Fuera de mi trabajo me gusta pasar tiempo con mi esposa Meri y mis dos
+                hijos Mario y Alejandro.
             </p>
         </div>
     </article>
 </div>
-
-<div class="highlight">
-    <div class="col-sm-12">
-        <blockquote class="thanks">
-            <p class="lead text-center">
-                Muchas gracias por leer hasta aquí y <strong>vuelve las veces que quieras</strong>.
-            </p>
-        </blockquote>
-    </div>
-</div>
-
-<section class="container content">
-    <div class="row">
-        <div class="col-sm-12">
-            <h3 class="contact">
-                <a class="contact" href="mailto:montealegreluis@gmail.com">
-                    ¡Contáctame!
-                    <img src="/images/contact.png">
-                </a>
-            </h3>
-        </div>
-    </div>
-</section>
