--- a/source/_views/components/en/menu.html.twig
+++ b/source/_views/components/en/menu.html.twig
@@ -16,31 +16,20 @@
                 <ul class="nav navbar-nav">
                     <li><a href="/en/cv/">Curriculum</a></li>
                     <li><a href="/en/portfolio/">Portfolio</a></li>
-                    <li><a href="/en/blog/">Blog</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Recommendations <span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="/talks/">Talks</a></li>
+                            <li><a href="/en/talks/">Favorite Talks</a></li>
                         </ul>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="/cv-latest.pdf" title="Download CV">
-                            <img height="25px" src="/images/download.png" alt="Download CV">
-                        </a>
-                    </li>
                     <li><a href="/">
                         <span class="language" title="Spanish">MX</span>
                     </a></li>
                     <li><a href="/en/" title="English">
                         <span class="language language-current">US</span>
                     </a></li>
-                    <li>
-                        <a href="/atom.xml" class="link-icon">
-                            <img src="/images/rss.png" alt="RSS">
-                        </a>
-                    </li>
                 </ul>
             </div>
         </div>
