--- a/source/en/index.html.twig
+++ b/source/en/index.html.twig
@@ -1,11 +1,11 @@
 ---
 layout: en/index
-title: Howdy!
+title: Hi!
 ---
 <div class="container">
     <article class="row">
         <div class="col-sm-12">
-            <header><h1 class="title">Howdy!</h1></header>
+            <header><h1 class="title">Hi!</h1></header>
         </div>
         <div class="col-sm-6">
             <p>
@@ -24,7 +24,7 @@ title: Howdy!
                 </a>
             </p>
             <p>
-                Since 2005, I started developing web applications in companies such as
+                Since 2005, I started developing Web applications in companies such as
                 <a
                     href="http://www.cfe.gob.mx/paginas/home.aspx"
                     target="_blank"
@@ -42,13 +42,13 @@ title: Howdy!
                     Digizent International
                 </a>
                 and as an <strong>independent consultant</strong>.
-                During these <strong>12 years</strong> I have worked with several
+                During these <strong>15 years</strong> I have worked with several
                 programming languages, mainly: <strong>PHP</strong>, <strong>Java</strong>
                 and <strong>C#</strong>.
             </p>
             <p>
-                I've also been a part-time professor at 10 universities in Puebla, teaching about
-                several programming topics. In July 2012, with the support of many friends, I
+                I've also been a part-time professor at 10 universities in Puebla, teaching
+                multiple programming topics. In July 2012, with the support of many friends, I
                 organized the
                 <a
                     href="http://www.comunidadphppuebla.com"
@@ -63,48 +63,21 @@ title: Howdy!
             <p>
                 In January, 2016, I moved to <strong>San Antonio Texas</strong> to start a new
                 endeavor, with my family, as a full-time instructor at
-                <a href="http://codeup.com/about/" target="_blank" rel="noopener">
+                <a href="http://codeup.com/" target="_blank" rel="noopener">
                     Codeup.
                 </a>
             </p>
             <p>
                 In May, 2018 I had the pleasure to join
                 <a href="https://www.ea.com/news/tour-the-ea-austin-studio" target="_blank" rel="noopener">
-                    EA in Austin, Texas
+                    EA
                 </a>,
-                where I currently work.
+                in Austin, Texas, where I'm currently working.
             </p>
             <p>
                 I love to spend my spare time with my wife (<strong>Meri</strong>) and my two
-                children (<strong>Mario</strong> and <strong>Alejandro</strong>, 6 and 4 years old
-                respectively). Things I enjoy the most: coffee, pizza, sushi, dark beer and science
-                fiction movies.
-            </p>
-            <p>
-                <strong>You can contact me</strong> through the social network links on this site
-                or by mail, either to work on something together or to talk about whatever you want.
+                children (<strong>Mario</strong> and <strong>Alejandro</strong>).
             </p>
         </div>
     </article>
 </div>
-
-<div class="highlight">
-    <div class="col-sm-12">
-        <blockquote class="thanks">
-            <p class="lead text-center">Thank you very much for your time!</p>
-        </blockquote>
-    </div>
-</div>
-
-<section class="container content">
-    <div class="row">
-        <div class="col-sm-12">
-            <h3 class="contact">
-                <a class="contact" href="mailto:montealegreluis@gmail.com">
-                    Contact me!
-                    <img src="/images/contact.png">
-                </a>
-            </h3>
-        </div>
-    </div>
-</section>
